packages/webassemblyjs/test/fixtures/conversions/type-errors/reinterpret-i32-f32/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Expected type f32 but got i64."
  );
});
